# game-core-server

./: Dockerfile  docker-compose-dev.yml  keys.py  main.py  pyproject.toml  requirements.txt
game_core_server/controller/: search_controller.py
game_core_server/model/: search_models.py
game_core_server/service/: search_games_service.py
game_core_server/utils/: renovate_tokens.py
