[tool.poetry]
name = "game-core-server"
version = "0.1.0"
description = ""
authors = ["Lamarcke <cassiolamarcksilvafreitas@gmail.com>"]
readme = "README.md"
packages = [{ include = "game_core_server" }]

[tool.poetry.dependencies]
python = "^3.10"
game-core-integrations = "^0.2.5"
fastapi = { extras = ["all"], version = "^0.88.0" }

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.12.0"
pylint = "^2.15.9"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
